--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.9",
     "gsap": "^3.12.5",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lottie-player": "^2.1.0",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
