--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
@@ -19,10 +20,12 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.9",
     "gsap": "^3.12.5",
+    "i18next": "^23.16.2",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.0",
     "react-lottie-player": "^2.1.0",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
